--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -212,7 +212,6 @@
             @include is-sp {
                 width: 100%;
                 // height: auto;
-                
             }
 
             &-row1 {
@@ -228,8 +227,8 @@
                 }
 
                 @include is-max(350px) {
-                        width: 100%;
-                        justify-content: center;
+                    width: 100%;
+                    justify-content: center;
                 }
                 &-ttl {
                     margin-left: 20px;
@@ -302,7 +301,7 @@
                         @include is-max(350px) {
                             width: 80%;
                             justify-content: center;
-                    }
+                        }
 
                         a {
                             display: inline-block;
@@ -392,13 +391,27 @@
         padding: 124px 0 98px 0;
 
         .cards {
-            flex-wrap: wrap;
+            display: flex;
             justify-content: space-between;
-            gap: 20px;
-            padding-top: 70px;
+            flex-wrap: wrap;
+
+            @include is-max(1030px) {
+                justify-content: space-around;
+            }
 
             .cards-card {
-                width: 310px;
+                // width: 310px;
+                // width: 100%;
+                display: inline-block;
+                margin-bottom: 23px;
+
+                @include is-sp {
+                    display: flex;
+                    align-items: center;
+                    padding-bottom: 24px;
+                    border-bottom: 1px dashed gray;
+                    align-items: flex-end;
+                }
 
                 &-img {
                     position: relative;
@@ -437,6 +450,7 @@
                         bottom: 1.5%;
                         right: 0%;
                         a {
+                    
                             font-size: 10px;
                             letter-spacing: 0.26em;
                             line-height: 12px;
@@ -452,11 +466,20 @@
                     text-align: center;
                     padding: 25px 0 18px 0;
 
+                    @include is-sp {
+                        border: none;
+                        text-align: left;
+                        padding-left: 16.5px;
+                    }
+
                     &-ttl {
-                        font-size: 14px;
-                        line-height: 21px;
+                        @include font-line(14, 21);
                         font-weight: 700;
                         color: #1f86cb;
+
+                        @include is-sp {
+                            @include font-line(15,22.5);
+                        }
                     }
 
                     &-txt {
