--- a/src/assets/scss/core/mixins/_media.scss
+++ b/src/assets/scss/core/mixins/_media.scss
@@ -35,7 +35,7 @@
 
 //SP
 @mixin is-sp {
-    @media only screen and (max-width: $breakpoint-sp) {
+    @media only screen and (max-width: $breakpoint-sp + 1) {
         @content;
     }
 }
