change:update sec6 slick

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -414,9 +414,26 @@
 .c-cards09 {
     width: 220px;
 
+	@include is-sp {
+		width: 47%;
+	}
+
+	@include is-max(540px) {
+		width: 45%;
+	}
+
+	@include is-max(340px) {
+		width: 43%;
+	}
 
     &-img {
         position: relative;
+
+		img {
+			@include is-sp {
+				width: 100%;
+			}
+		}
 
         &-num {
             position: absolute;
