--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -2,7 +2,50 @@
 	padding-top: 70px;
 	padding-bottom: 60px;
 	display: flex;
+	position: relative;
 
+	.pc-left {
+		position: absolute;
+		top: 29%;
+		left: -4%;
+		width: 12px;
+		height: 25px;
+		background-image: url(../image/page/top-page/arr-left.png);
+		background-repeat: no-repeat;
+		z-index: 10;
+		
+
+		@include is-max(743px) {
+			background-image: url(../image/page/top-page/arr-left-sp.png);
+			width: 21px;
+			height: 36px;
+			left: 0;
+			width: 40px;
+			height: 80px;
+			background-position: center;
+			background-color: #fff;
+		}
+	}
+	.pc-right {
+		position: absolute;
+		top: 29%;
+		right: -2%;
+		width: 16px;
+		height: 25px;
+		background-image: url(../image/page/top-page/arr-right.png);
+		background-repeat: no-repeat;
+		z-index: 10;
+		
+
+		@include is-max(743px) {
+			background-image: url(../image/page/top-page/arr-right-sp.png);
+			right: 0;
+			width: 40px;
+			height: 80px;
+			background-position: center;
+			background-color: #fff;
+		}
+	}
 	&__item {
 		width: calc(100% / 4);
 		margin-right: 30px;
@@ -33,7 +76,7 @@
 			}
 
 			.youtube {
-				color: #B51F32;
+				color: #b51f32;
 				font-family: century-gothic, sans-serif;
 				font-weight: 400;
 				position: absolute;
@@ -49,7 +92,7 @@
 			}
 
 			.movies {
-				color: #B51F32;
+				color: #b51f32;
 				font-family: century-gothic, sans-serif;
 				font-weight: 400;
 				position: absolute;
@@ -97,7 +140,6 @@
 					color: rgba(0, 0, 0, 0.5);
 				}
 			}
-			
 
 			.achieve {
 				color: $color-text05;
