--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -1302,11 +1302,13 @@
 			}
 
 			.crd-wrppr {
-				padding: 69px 0 58px 0;
+
+				display: flex;
+				// justify-content:center;
 				flex-wrap: wrap;
+				padding: 69px 0 58px 0;
 				row-gap: 30px;
 				column-gap: 30px;
-				justify-content: center;
 			}
 
 			@include is-sp {
@@ -1360,7 +1362,7 @@
 		.bg_2 {
 			position: absolute;
 			left: 0%;
-			top: 36%;
+			top: -4%;		
 
 			@include is-sp {
 				position: absolute;
