--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -1302,19 +1302,20 @@
 			}
 
 			.crd-wrppr {
-
 				display: flex;
-				// justify-content:center;
 				flex-wrap: wrap;
 				padding: 69px 0 58px 0;
 				row-gap: 30px;
 				column-gap: 30px;
+				
+				@include is-max(820px) {
+					justify-content: center;
+				}
+			
+				@include is-sp {
+					padding: 200px 0 200px 0;
+				}
 			}
-
-			@include is-sp {
-				padding: 200px 0 200px 0;
-			}
-		}
 
 		.bg_7 {
 			position: absolute;
