continue fixing header

--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -180,8 +180,7 @@
 // header
 
 .top-header {
-	background: rgb(95, 165, 205);
-	position: relative;
+	position: absolute;
 	padding-top: 100px;
 	overflow: hidden;
 
