--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -5,9 +5,9 @@
 	.sect_1 {
 		// margin-top: -109px;
 		z-index: 4;
-		position: relative;
 		background: rgb(95, 165, 205);
 		position: relative;
+		padding-top: 100px;
 
 		// clip top
 		.top-clip {
