added about page

--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -172,6 +172,10 @@
                     letter-spacing: 0.2em;
                 }
             }
+            
+            .txt{
+                color: #2588cd;
+            }
         }
         .sec1-bg1 {
             position: absolute;
