--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -180,7 +180,6 @@
 // header
 
 .top-header {
-	position: absolute;
 	padding-top: 100px;
 	overflow: hidden;
 
@@ -197,7 +196,8 @@
 		height: 100%;
 		z-index: 999;
 		transform: translateX(-100%);
-		transition: .3s ease-in-out;
+		transition: 0.3s ease-in-out;
+		background: linear-gradient(to top, #2593d5, #2579bf, #2593d5);
 	}
 
 	.logo {
@@ -212,19 +212,20 @@
 	}
 
 	&-nav {
-		position: fixed;
+		position: absolute;
 		top: 0;
 		left: 0;
 		right: 0;
-		max-width: 100%;
+		max-width: 1200px;
 		margin: 0 auto;
 		z-index: 999;
 		height: 80px;
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		@include is-sp{
-			width: calc(100% - 75px);
+
+		@include is-sp {
+			width: calc(100% - 105px);
 			margin: unset;
 			position: unset;
 			height: 100%;
@@ -238,38 +239,41 @@
 			align-items: center;
 			padding-left: 50px;
 			padding-top: 15px;
-			@include is-max(980px){
+
+			@include is-max(980px) {
 				padding-left: 20px;
 			}
-			@include is-sp{
+
+			@include is-sp {
 				width: 100%;
+				padding-top: 34.5px;
 				margin-bottom: 22px;
 			}
 			&-link {
 				width: 100%;
 				align-items: center;
-				.logo{
+				.logo {
 					margin-right: 15px;
 
-					@include is-sp{
+					@include is-sp {
 						width: 65px;
 					}
 				}
-				p{
+				p {
 					@include font-line(14, 19);
 					font-weight: 700;
 					font-family: cross-platform-yu-gothic;
 					color: #fff;
 					align-items: center;
-					letter-spacing: .3em;
+					letter-spacing: 0.3em;
 
-					@include is-max(980px){
+					@include is-max(980px) {
 						font-size: 1.3vw;
 					}
-					@include is-sp{
+					@include is-sp {
 						@include font-line(13, 17.5);
 					}
-					@include is-max(375px){
+					@include is-max(375px) {
 						@include font-line(10, 17.5);
 					}
 				}
@@ -280,11 +284,11 @@
 			display: flex;
 			justify-content: flex-end;
 			width: 66.67%;
-			@include is-sp{
+			@include is-sp {
 				width: 100%;
 				flex-wrap: wrap;
 			}
-			&-ul{
+			&-ul {
 				display: flex;
 				flex-wrap: nowrap;
 				justify-content: center;
@@ -292,39 +296,51 @@
 				flex-direction: column;
 				width: calc(100% - 150px);
 				padding-right: 30px;
-				@include is-sp{
+				@include is-sp {
 					width: 100%;
 					padding-right: 0;
 				}
-				a{
+
+				a {
 					@include font-line(11);
 					font-weight: 700;
 					font-family: cross-platform-yu-gothic;
 					color: #fff;
 
-					@include is-sp{
+					@include is-sp {
 						@include font-line(15);
 						font-weight: 500;
-						letter-spacing: .28em;
+						letter-spacing: 0.28em;
 					}
 				}
-				&-01{
+				&-01 {
 					width: 100%;
 					display: flex;
 					flex-wrap: wrap;
 					justify-content: flex-end;
-					@include is-sp{
+					@include is-sp {
 						order: 2;
 					}
-					li{
-						@include is-sp{
+					&-link {
+						position: relative;
+						@include is-sp {
 							width: 100%;
 							border-bottom: 1px solid #fff;
-							padding: 19px 28px;
+							padding: 25px 28px;
 						}
-						&:not(:last-child){
-							&::after{
-								content: "/";
+
+						&:nth-child(1) , &:nth-child(2) {
+							img {
+								display:none;
+
+								@include is-sp {
+									display: block;
+								}
+							}
+						}
+						&:not(:last-child) {
+							&::after {
+								content: "";
 								@include font-line(11);
 								font-weight: 500;
 								font-family: cross-platform-yu-gothic;
@@ -332,87 +348,109 @@
 								padding: 0 15px 0 10px;
 							}
 						}
-						a{
+						a {
 							font-weight: 500;
-							letter-spacing: .28em;
+							letter-spacing: 0.28em;
 						}
-					}
-				}
-				&-02{
-					width: 100%;
-					display: flex;
-					flex-wrap: wrap;
-					justify-content: flex-end;
-					line-height: 1.2;
-					&-link{
-						position: relative;
-						@include is-sp{
-							width: 100%;
-							line-height: 1.5;
-							border-bottom: 1px solid #fff;
-							padding: 19px 28px;
-						}
-						&:nth-child(1){
-							@include is-sp{
-								border-top: 1px solid #fff;
-							}
-						}
-						&:nth-child(1), &:nth-child(5){
-							img{
-								display: none;
-							}
-						}
-						&:not(:last-child){
-							margin-right: 30px;
 
-							@include is-max(1100px){
-								margin-right: 20px;
-							}
-							@include is-sp{
-								margin-right: 0;
-							}
-						}
-						&:hover{
-							.nav-links-ul-02-link-submenu{
-								display: block;
-								@include is-sp{
-									display: none;
-								}
-							}
-						}
-						img{
+						img {
 							width: 7px;
 							position: absolute;
 							top: 50%;
 							right: -10px;
 							transform: translate(0, -40%);
-							@include is-max(1100px){
+							@include is-max(1100px) {
 								right: -5px;
 							}
 
-							@include is-sp{
-								right:0;
+							@include is-sp {
+								right: 27px;
 							}
 						}
-						a{
-							letter-spacing: .54em;
+					}
+					
+				}
+				&-02 {
+					width: 100%;
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: flex-end;
+					line-height: 1.2;
+
+					&-link {
+						position: relative;
+						@include is-sp {
+							width: 100%;
+							line-height: 1.5;
+							border-bottom: 1px solid #fff;
+							padding: 25px 28px;
+						}
+						&:nth-child(1) {
+							@include is-sp {
+								border-top: 1px solid #fff;
+							}
+						}
+						&:nth-child(1),
+						&:nth-child(5) {
+							img {
+								display: none;
+
+								@include is-sp {
+									display: block;
+								}
+							}
+						}
+						&:not(:last-child) {
+							margin-right: 30px;
+
+							@include is-max(1100px) {
+								margin-right: 20px;
+							}
+							@include is-sp {
+								margin-right: 0;
+							}
+						}
+						&:hover {
+							.nav-links-ul-02-link-submenu {
+								display: block;
+								@include is-sp {
+									display: none;
+								}
+							}
+						}
+						img {
+							width: 7px;
+							position: absolute;
+							top: 50%;
+							right: -10px;
+							transform: translate(0, -40%);
+							@include is-max(1100px) {
+								right: -5px;
+							}
+
+							@include is-sp {
+								right: 27px;
+							}
+						}
+						a {
+							letter-spacing: 0.54em;
 						}
 
-						&-submenu{
+						&-submenu {
 							display: none;
 							position: absolute;
 							bottom: -65px;
 							left: 50%;
 							transform: translate(-50%, 0);
-							background-color: #fff;
-							@include is-sp{
+							
+							@include is-sp {
 								position: relative;
 								bottom: unset;
 								left: unset;
 								transform: unset;
 								width: 100%;
 							}
-							&::before{
+							&::before {
 								content: "";
 								display: block;
 								width: 100%;
@@ -421,26 +459,31 @@
 								top: -10px;
 								left: 0;
 							}
-							li{
+							li {
 								white-space: nowrap;
 								padding: 0 10px;
 								text-align: center;
-								a{
-									color: #257bc0;
+
+								@include is-sp {
+									text-align: left;
+									padding-left: 40px;
+								}
+								a {
+									color: #fff;
 								}
 							}
 						}
 					}
 				}
 			}
-			&-mail{
+			&-mail {
 				background-color: pink;
 				width: 150px;
-				@include is-sp{
+				@include is-sp {
 					width: 80%;
 					margin: 30px auto 0;
 				}
-				&-link{
+				&-link {
 					background-color: #b71e32;
 					width: 100%;
 					height: 100%;
@@ -454,23 +497,23 @@
 					box-shadow: 0px -1px 0px 4px #b71e32;
 					-webkit-box-shadow: 0px -1px 0px 4px #b71e32;
 					-moz-box-shadow: 0px -1px 0px 4px #b71e32;
-					@include is-sp{
+					@include is-sp {
 						border-right: 1px solid #fff;
 						border-top: 1px solid #fff;
 						padding: 25px 0;
 					}
-					.mail{
+					.mail {
 						width: 22px;
 					}
-					p{
+					p {
 						@include font-line(14, 18);
 						font-weight: 500;
 						font-family: cross-platform-yu-gothic;
 						color: #fff;
 						text-align: center;
-						letter-spacing: .13em;
+						letter-spacing: 0.13em;
 						margin-top: 5px;
-						@include is-sp{
+						@include is-sp {
 							margin-top: 15px;
 						}
 					}
@@ -479,12 +522,32 @@
 		}
 	}
 
-	&-close{
-		width: 75px;
+	&-close {
+		width: 105px;
 		background-color: #81b3d4;
 		display: none;
+		padding-top: 19px;
 
-		@include is-sp{
+		a {
+			.close-btn {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				width: 100%;
+
+				img {
+					width: 24.5px;
+				}
+			}
+
+			p {
+				color: #fff;
+				text-transform: uppercase;
+				font-family: cross-platform-yu-gothic;
+				@include font-line(11, 43);
+			}
+		}
+		@include is-sp {
 			display: block;
 		}
 	}
@@ -552,11 +615,7 @@
 			left: 0;
 			height: 380px;
 			width: 100vw;
-			background-image: linear-gradient(
-				to bottom,
-				rgba(255, 0, 0, 0),
-				rgba(37, 121, 191, 1)
-			);
+			background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(37, 121, 191, 1));
 			display: none;
 
 			@include is-sp {
@@ -813,7 +872,7 @@
 			left: 1047px;
 			z-index: 555;
 
-			@include is-max(1110px){
+			@include is-max(1110px) {
 				left: 95%;
 			}
 
@@ -838,15 +897,15 @@
 				left: 91%;
 			}
 
-			@include is-max(500px){
+			@include is-max(500px) {
 				left: 87%;
 			}
 
-			@include is-max(430px){
+			@include is-max(430px) {
 				left: 85%;
 			}
 
-			@include is-max(375px){
+			@include is-max(375px) {
 				left: 83%;
 			}
 		}
@@ -926,7 +985,7 @@
 				color: #fff;
 				padding-left: 10px;
 				line-height: 18.5px;
-				letter-spacing: .14em;
+				letter-spacing: 0.14em;
 				@include is-max(375px) {
 					letter-spacing: 0;
 					@include font-line(13);
